objects/Apttus_Config2__ProductOptionPrice__c.object
<CustomObject>
    <description>Represents the price for an option or component</description>
    <fields>
        <fullName>APTS_Ext_ID__c</fullName>
        <externalId>true</externalId>
        <label>APTS Ext ID</label>
        <length>60</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AdjustmentAmount__c</fullName>
        <description>The price adjustment amount.</description>
        <label>Adjustment Amount</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AdjustmentType__c</fullName>
        <description>The price adjustment type</description>
        <label>Adjustment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>% Discount</fullName>
                </value>
                <value>
                    <fullName>Discount Amount</fullName>
                </value>
                <value>
                    <fullName>% Markup</fullName>
                </value>
                <value>
                    <fullName>Markup Amount</fullName>
                </value>
                <value>
                    <fullName>Price Override</fullName>
                </value>
                <value>
                    <fullName>Price Factor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AllocateGroupAdjustment__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates whether group price adjustments should be allocated to the product option.</description>
        <label>Allocate Group Adjustment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AllowManualAdjustment__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates whether manual price adjustments are allowed for the product option.</description>
        <label>Allow Manual Adjustment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ChargeType__c</fullName>
        <description>The charge type associated with the price</description>
        <label>Charge Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>License Fee</fullName>
                </value>
                <value>
                    <fullName>Subscription Fee</fullName>
                </value>
                <value>
                    <fullName>Implementation Fee</fullName>
                </value>
                <value>
                    <fullName>Installation Fee</fullName>
                </value>
                <value>
                    <fullName>Maintenance Fee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ContractItemNumber__c</fullName>
        <description>The Unique identifier for the item number as referred to in the quote or contract</description>
        <externalId>true</externalId>
        <inlineHelpText>The Unique identifier for the item number as referred to in the quote or contract</inlineHelpText>
        <label>Contract Item Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ContractPrice__c</fullName>
        <description>The contract price for the option</description>
        <inlineHelpText>The contract price for the option</inlineHelpText>
        <label>Contract Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__HideInvoiceDisplay__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the item would be hidden in the invoice display.</description>
        <inlineHelpText>Indicates whether the item would be hidden in the invoice display.</inlineHelpText>
        <label>Hide Invoice Display</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IsQuantityReadOnly__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the quantity is modifiable for the option</description>
        <inlineHelpText>Indicates whether the quantity is modifiable for the option</inlineHelpText>
        <label>Is Quantity Read Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IsSellingTermReadOnly__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the selling term is modifiable for the recurring option</description>
        <inlineHelpText>Indicates whether the selling term is modifiable for the recurring option</inlineHelpText>
        <label>Is Selling Term Read Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PriceIncludedInBundle__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the option price is included in the bundle.</description>
        <label>Price Included In Bundle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PriceListId__c</fullName>
        <description>ID of the price list associated with the product</description>
        <label>Price List</label>
        <referenceTo>Apttus_Config2__PriceList__c</referenceTo>
        <relationshipLabel>Option Pricing</relationshipLabel>
        <relationshipName>ProductOptionPrices</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PriceOverride__c</fullName>
        <description>The price override</description>
        <label>Price Override</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductOptionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the product option</description>
        <label>Product Option</label>
        <referenceTo>Apttus_Config2__ProductOptionComponent__c</referenceTo>
        <relationshipLabel>Option Prices</relationshipLabel>
        <relationshipName>OptionPrices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RollupPriceMethod__c</fullName>
        <description>The rollup price method.</description>
        <inlineHelpText>The rollup price method.</inlineHelpText>
        <label>Rollup Price Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Per Unit</fullName>
                </value>
                <value>
                    <fullName>Flat Price</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RollupPriceToBundle__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates whether the option price is rolled up to the bundle. This field is deprecated. Use the Price Included in Bundle field instead.</description>
        <label>Rollup Price To Bundle (Deprecated)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Sequence__c</fullName>
        <description>The option sequence</description>
        <label>Sequence</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Product Option Price</label>
    <nameField>
        <displayFormat>OP-{0000000000}</displayFormat>
        <label>Price Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Option Prices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>